--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ app.*.map.json
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# Firebase
+.firebaserc
+firebase-debug.log
+.firebase/*.cache
